# Hosbital-System

./: CMakeLists.txt  README.md  appointment.cpp  appointment.h  availability.cpp  availability.h  doctor.cpp  doctor.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  patient.cpp  patient.h  timeslot.cpp  timeslot.h
